--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+`
 <!DOCTYPE html>
 <html>
   <head>
@@ -14,15 +15,26 @@
       <img
            src="https://images-na.ssl-images-amazon.com/images/I/710Bre2J-yL._SY679_.jpg"
            >
-      <img
-           src=""
+  <html>
+    <body background="http://cdn6.bigcommerce.com/s-l10hehrk/products/17668/images/29986/GX703U__63440.1439853458.380.380.jpg?c=2">
+          </body>
+  
+      </html>
       <ul>
-        <li> Take a 4oz clear elmers glue and pour it into a bowl</li>
+        <li> Take a 4oz clear elmers glue(or you can use Elmers blue glitter) and pour it into a bowl</li>
         <li> Add in a bit of water and mix slowly as not to create air bubbles</li>
       <li> Add in as much blue food coloring and blue glitter as you would like!</li>
       <li>After mixing, take a borax solution(one teaspoon of borax to one cup of warm water) and slowly add to your glue mixture.</li>
       <li> When your slime does not stick to the bowl, take it out and knead it with you hands</li>
       <li> Your slime is done!</li>
+      <table>
+    <tr>
+      <th>
+      <img
+           src="https://img.staticbg.com/thumb/water/oaupload/banggood/images/AC/06/cac8f45f-0321-40f9-9b8d-ca473d6afa70.jpg">
+      
+      </th>
+        </tr></table> 
     </ul>
        </p>
   </body>
