--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-`
 <!DOCTYPE html>
 <html>
   <head>
@@ -12,18 +11,21 @@
       How to make BLUE GLITTER SLIME!</h1>
     <p> 
       Make something <strong>amazing</strong> that is fun to play with!
+      <p>You can also call this Frozen Slime</p>
       <img
            src="https://images-na.ssl-images-amazon.com/images/I/710Bre2J-yL._SY679_.jpg"
            >
+      <img
+           src="https://images-na.ssl-images-amazon.com/images/I/51sI47UPKdL.jpg"
   <html>
     <body background="http://cdn6.bigcommerce.com/s-l10hehrk/products/17668/images/29986/GX703U__63440.1439853458.380.380.jpg?c=2">
           </body>
   
       </html>
       <ul>
-        <li> Take a 4oz clear elmers glue(or you can use Elmers blue glitter) and pour it into a bowl</li>
+        <li> Take a 4oz clear elmers glue(or you can use Elmers blue glitter glue) and pour it into a bowl</li>
         <li> Add in a bit of water and mix slowly as not to create air bubbles</li>
-      <li> Add in as much blue food coloring and blue glitter as you would like!</li>
+        <li> Add in as much blue food coloring and blue glitter as you would like!If you use many types of glitter, it will be more sparkly. Also, to make Frozen slime, color your slime ice blue, and you can add white glitter, silver glitter, and iridescent white glitter. You could even add small snowflake glitter, or just one snowflake charm!</li>
       <li>After mixing, take a borax solution(one teaspoon of borax to one cup of warm water) and slowly add to your glue mixture.</li>
       <li> When your slime does not stick to the bowl, take it out and knead it with you hands</li>
       <li> Your slime is done!</li>
@@ -32,10 +34,12 @@
       <th>
       <img
            src="https://img.staticbg.com/thumb/water/oaupload/banggood/images/AC/06/cac8f45f-0321-40f9-9b8d-ca473d6afa70.jpg">
-      
+        <p> This is an example of slime using the Elmers Blue Glitter Glue!</p>
+        <p> Make sure to vist the Etsy website to see more cool slimes and check out slime shops!</p>
+        <a herf="https://www.etsy.com/market/slime">Check it out!</a>
       </th>
         </tr></table> 
     </ul>
-       </p>
+      </p>
   </body>
 </html>
